# translate

./: AUTHORS  Makefile.am  README  README.md  README.ru  configure.ac  main.c
